syntax = "proto3";
option go_package = "github.com/canbiocin/proto";

import "canbiocin/proto/recipe.proto";
import "canbiocin/proto/probiotics.proto";
import "canbiocin/proto/prebiotics.proto";
import "canbiocin/proto/postbiotics.proto";


message CreateIngredientRequest {
    Ingredient ingredient = 1;
}

message CreateIngredientResponse {
    string id = 1;
}

message GetIngredientRequest {
    string id = 1;
    string type = 2;
}
message GetIngredientResponse {
    Ingredient ingredient = 1;
}

message UpdateIngredientRequest {
    Ingredient ingredient = 1;
}

message UpdateIngredientResponse {
}

message DeleteIngredientRequest {
    string id = 1;
    string type = 2;
}

message DeleteIngredientResponse {
}

message ListIngredientsRequest {
}

message ListIngredientsResponse {
    repeated Ingredient ingredients = 1;
}

message ListProbioticSppRequest {
}

message ListProbioticSppResponse {
  repeated string spps = 1;
}

message ListPrebioticCategoryRequest {
}

message ListPrebioticCategoryResponse {
  repeated string categories = 1;
}

message CreateRecipeRequest {
    Recipe recipe = 1;
}

message CreateRecipeResponse {
    string id = 1;
}

message GetRecipeRequest {
    string id = 1;
}

message GetRecipeResponse {
    Recipe recipe = 1;
    repeated Probiotic probiotics = 2;
    repeated Prebiotic prebiotics = 3;
    repeated Postbiotic postbiotics = 4;
}

message UpdateRecipeRequest {
    Recipe recipe = 1;
}

message UpdateRecipeResponse {
}

message DeleteRecipeRequest {
    string id = 1;
}

message DeleteRecipeResponse {
}

message ListRecipesRequest {
  string ingredientId = 1;
}

message ListRecipesResponse {
    repeated Recipe recipes = 1;
}

message CalculateRecipeRequest {
  string recipe_id = 1;
  int32 serving_size_grams = 2;
  int32 total_grams = 3;
}

message CalculateRecipeResponse {
  RecipeDetails recipe_details = 1;
}

service CanbiocinService {
  rpc CreateIngredient(CreateIngredientRequest) returns (CreateIngredientResponse) {}
  rpc GetIngredient(GetIngredientRequest) returns (GetIngredientResponse) {}
  rpc UpdateIngredient(UpdateIngredientRequest) returns (UpdateIngredientResponse) {}
  rpc DeleteIngredient(DeleteIngredientRequest) returns (DeleteIngredientResponse) {}
  rpc ListIngredients(ListIngredientsRequest) returns (ListIngredientsResponse) {}
  rpc ListProbioticSpp(ListProbioticSppRequest) returns (ListProbioticSppResponse) {}
  rpc ListPrebioticCategory(ListPrebioticCategoryRequest) returns (ListPrebioticCategoryResponse) {}
  rpc CreateRecipe(CreateRecipeRequest) returns (CreateRecipeResponse) {}
  rpc GetRecipe(GetRecipeRequest) returns (GetRecipeResponse) {}
  rpc UpdateRecipe(UpdateRecipeRequest) returns (UpdateRecipeResponse) {}
  rpc DeleteRecipe(DeleteRecipeRequest) returns (DeleteRecipeResponse) {}
  rpc ListRecipes(ListRecipesRequest) returns (ListRecipesResponse) {}
  rpc CalculateRecipe(CalculateRecipeRequest) returns (CalculateRecipeResponse) {}
}
